Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -14,19 +14,19 @@ videography-2_image: /images/forsoul-2019/eon-forsoul-1.jpg
 services:
   - name: Fashion
     url:
-    image_path: /images/forsoul-2019/eon-forsoul-1.jpg
+    image_path: /images/placeholder-2.jpg
   - name: Lifestyle
     url:
-    image_path: /images/forsoul-2019/eon-forsoul-1.jpg
-  - name: Venue
-    url:
-    image_path: /images/forsoul-2019/eon-forsoul-1.jpg
-  - name: Food
-    url:
-    image_path: /images/forsoul-2019/eon-forsoul-1.jpg
+    image_path: /images/riverhouse/EON-riverhouse-28.jpg
   - name: Product
     url:
-    image_path: /images/forsoul-2019/eon-forsoul-1.jpg
+    image_path: /images/alex-hossick/EON-hossick-30.jpg
+  - name: Venue
+    url:
+    image_path: /images/ulu-cliffhouse/eon-cliffhouse-8.jpg
+  - name: Food
+    url:
+    image_path: /images/kabron/eon-kabron-21.jpg
 ---
 
 <!-- Heading Banner  -->
