Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -63,7 +63,7 @@ services:
     <p>We offer photography that helps you connect with your customers and tell a story. From studio shoots, to fully-managed editorial campaigns well help you bring your vision to life.&nbsp;</p>
   </div>
   <div class="col-4_sm-12 padded-2 editable">
-    <h3><a href="#videgraphy">Videography &gt; </a></h3>
+    <h3><a href="#videography">Videography &gt; </a></h3>
     <p>Video is a powerful tool to capture the essence of your brand. From video walkthroughs of luxury villas, to fashion videos that shows &nbsp;how your fabric moves and flows.&nbsp;</p>
   </div>
   <div class="col-4_sm-12 padded-2 editable">
