Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -79,11 +79,11 @@ services:
     <p>What makes a great photo? It's not about lighting or composition, although both of these are important. It's knowing what story you want to tell, what feeling you want to convey, what information you need to communicate and bringing that to life through the lens.&nbsp;</p>
     <p>We work with local &amp; international companies here in Bali, as well as remotely for brands from all over the world to help them tell their story, and for the right project travel to you.</p>
     <div class="grid">
-      <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0">
+      <div class="col-6_sm-12 padded-1 padded-l-0 mob-p-0">
         <h4 class="margin-top-2">Affordable Packages</h4>
         <p class="subtle">With mini-shoots starting as little as $350, we've got packages to suit every brand and budget. Whether you're launching a new fashion label or product line, we understand the needs of entrepreneurs and small business owners and can guide you through the process to get the maximum impact from your budget.&nbsp;</p>
       </div>
-      <div class="col-6_xs-12 padded-1 mob-p-0">
+      <div class="col-6_sm-12 padded-1 mob-p-0">
         <h4 class="margin-top-2">Full Production</h4>
         <p class="subtle">Think of us as your very own photography production team. From creating a content strategy, coming up with a creative direction for the shoot and managing all the logistics from location sourcing to model castings. You can send us your products or outfits and we'll handle everything else -- keeping you in the loop every step of the way.&nbsp;</p>
       </div>
