Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -74,31 +74,31 @@ services:
 
 <!-- - - - -  - - - - PHOTOGRAPHY SECTION  - - - - - - - - - - - - -->
 <section class="border-center grid-spaceBetween padded padded-b-15vh" id="photography">
-  <div class="col-6_xs-12 padded editable">
+  <div class="col-6_sm-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Photography.</h2>
     <p>What makes a great photo? It's not about lighting or composition, although both of these are important. It's knowing what story you want to tell, what feeling you want to convey, what information you need to communicate and bringing that to life through the lens.&nbsp;</p>
     <p>We work with local &amp; international companies here in Bali, as well as remotely for brands from all over the world to help them tell their story, and for the right project travel to you.</p>
     <div class="grid">
-      <div class="col-6_sm-12 padded-1 padded-l-0 mob-p-0">
+      <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0">
         <h4 class="margin-top-2">Affordable Packages</h4>
         <p class="subtle">With mini-shoots starting as little as $350, we've got packages to suit every brand and budget. Whether you're launching a new fashion label or product line, we understand the needs of entrepreneurs and small business owners and can guide you through the process to get the maximum impact from your budget.&nbsp;</p>
       </div>
-      <div class="col-6_sm-12 padded-1 mob-p-0">
+      <div class="col-6_xs-12 padded-1 mob-p-0">
         <h4 class="margin-top-2">Full Production</h4>
         <p class="subtle">Think of us as your very own photography production team. From creating a content strategy, coming up with a creative direction for the shoot and managing all the logistics from location sourcing to model castings. You can send us your products or outfits and we'll handle everything else -- keeping you in the loop every step of the way.&nbsp;</p>
       </div>
     </div>
   </div>
-  <div class="col-6_xs-12 padded mob-order-1">
+  <div class="col-6_sm-12 padded mob-order-1">
     <img src="/images/forsoul-2019/eon-forsoul-23.jpg" class="editable" />
     <p class="image-caption-right editable">
       This is a short image caption
     </p>
   </div>
-  <div class="col-6_xs-12 padded-l-10p">
+  <div class="col-6_sm-12 padded-l-10p">
     <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.photography-2_image}})"></div>
   </div>
-  <div class="col-5_xs-12-middle padded centered">
+  <div class="col-5_sm-12-middle padded centered">
 
       <hr class="centered" />
       <p class="editable">
@@ -146,7 +146,7 @@ services:
 
 <!-- - - - -  - - - - Videography SECTION  - - - - - - - - - - - - -->
 <section class="border-center grid-spaceBetween padded padded-b-15vh v-light-bg" id="videography">
-  <div class="col-6_xs-12 padded editable">
+  <div class="col-6_sm-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Videography.</h2>
     <p>Videos have the power to take your brand to the next level and engage your audience in a whole new way. Videography is all about capturing a feeling, telling a story -- but it's also about showcasing the unique benefits of your target audience. To do that we make sure that we take the time to really understand your brand, your customers, and your product. We bring a decade of marketing experience to the table and combine that with videography talent for a winning combination that helps you stand out from the crowd and have video content that makes an impact.&nbsp;</p>
     <div class="grid">
@@ -160,13 +160,13 @@ services:
       </div>
     </div>
   </div>
-  <div class="col-6_xs-12 padded mob-order-1">
+  <div class="col-6_sm-12 padded mob-order-1">
     <img src="/images/forsoul-2019/eon-forsoul-1.jpg" class="editable" />
     <p class="image-caption-right editable">
       Videography for fashion brands in Bali and the world.
     </p>
   </div>
-  <div class="col-6_xs-12 padded-l-10p">
+  <div class="col-6_sm-12 padded-l-10p">
     <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.videography-2_image}})"></div>
   </div>
   <div class="col-5_xs-12-middle padded centered">
@@ -230,7 +230,7 @@ services:
 
 <!-- Marketing intro -->
 <section class="grid-spaceBetween padded padded-b-0" id="marketing">
-  <div class="col-9_xs-12 padded editable">
+  <div class="col-9_sm-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Marketing.</h2>
     <p>From brand development &amp; strategy through to implementation, we're a one-stop-shop that can handle all of your needs -- and prioritise your business as though it were our own.&nbsp;</p>
     <p>Whether you're just starting out and want a roadmap of where to focus your efforts (because we know how overwhelming it can be) or your have an existing brand that's looking for fresh ideas and modern digital experience, we'll help you find a package that suits your needs (and your budget!). Then you can choose to take our strategy and run with it, or we can manager your social media for you ongoing.&nbsp;</p>
@@ -249,16 +249,16 @@ services:
       </div>
     </div>
   </div>
-  <div class="col-3_xs-12-middle padded-1 mob-order-1">
+  <div class="col-3_sm-12-middle padded-1 mob-order-1">
     <img src="/images/forsoul-2019/eon-forsoul-1.jpg" class="editable" />
     <p class="image-caption-right editable">
       This is a short image caption
     </p>
   </div>
-  <div class="col-6_xs-12 padded-l-10p">
+  <div class="col-6_sm-12 padded-l-10p">
     <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.photography-2_image}})"></div>
   </div>
-  <div class="col-5_xs-12-middle padded centered">
+  <div class="col-5_sm-12-middle padded centered">
 
       <hr class="centered" />
       <p class="editable">
