Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -46,8 +46,9 @@ services:
       </span></span></h2>
     </div>
     <div class="col-6_sm-12-middle padded editable">
-      <p>We're more than just a photography studio, we're a full creative agency.&nbsp;</p>
-      <p>TODO. We need to write an epic intro here that show's not just how talented we we are but also with how much dedication we have for our clients and how we handle everything and go above and beyond.&nbsp;</p>
+    <p>We're more than just a photography studio, we're a full creative agency.&nbsp;</p>
+      <p>When we aren't creating content for incredible clients from all over the world, we're teaching the next generation of creatives. Running a school that teaches marketing, photography and social media means that we can bring the latest actionable insights and techniques to work for your brand or business. </p>
+      <p> We're not the kind of team that just turns up and shoots. With every client we take the time to really get to your know brand, understand your vision and bring it to life through content that we know will get actionable results for your business. Which is probably why we've received consistent 5-star reviews and recommendations from our clients over the years. </p>
     </div>
   </div>
 </section>
