Emile: "did you push that change"

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -296,7 +296,7 @@ services:
     </div>
     {% endfor%}
 
-    <div class="col-4-bottom padded-1">
+    <div class="col-4-bottom padded padded-b-0">
       <p class="emphasis"> Looking for <br /> something unique? </p>
       <a class="subtle-button" href="contact"> Let's Chat > </a>
     </div>
