--- a/about.html
+++ b/about.html
@@ -11,6 +11,12 @@ banner_image: /images/placeholder.jpg
 <!-- - - - - - - - - - - - - - Banner both - - - - - - - - - - - - - - - - - -->
 
 <!-- - - - - - - - - - - - - - Intro Section both - - - - - - - - - - - - - -->
-<section class="padded about-page featured-bg">
-
+<section class="padded light-bg grid">
+  <div class="col-6_sm-12 padded-1">
+      <div class="bg-image square" style="background-image:url('{{page.portfolio_image}}')"></div>
+  </div>
+  <div class="col-6_sm-12 padded-1 editable">
+      <h2> Hey, I'm Emilio </h2>
+      <p> Also known as Eyes of a Nomad </p>
+  </div>
 </section>
