--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@ featured_image: /images/uma-2020/eon-uma2020-30.jpg
 
       {% for project in site.projects reversed %}
       <a class="col-4_sm-6_xs-10 padded-1 portfolio-item
-      {% for category in project.categories %} {{category}} {% endfor %}
+      {% for category in project.categories %} {{category | downcase}} {% endfor %}
       {% unless project.categories contains "featured" %} hidden {% endunless %}"
       href="{{project.url}}">
         <div class="bg-image" style="background-image:url('{{project.featured_image}}')"></div>
