header and footer

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -284,7 +284,7 @@ services:
 </section>
 
 <section class="padded v-light-bg service-type">
-  <h2 class="centered"> Explore in detail </h2>
+  <h2 class="centered"> Explore our Services in detail </h2>
   <div class="padded grid">
 
     {% for service in page.services %}
