remove DS Store

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -86,7 +86,7 @@ services:
       </div>
       <div class="col-6_xs-12 padded-1 mob-p-5">
         <h4 class="margin-top-2">Full Production</h4>
-        <p class="subtle">Think of us as your very own photography production team. From creating a content strategy, coming up with a creative direction for the shoot and managing all the logistics from location sourcing to model castings. You can send us your products or outfits and we'll handle everything else -- keeping you in the loop every step of the way.&nbsp;</p>
+        <p class="subtle">Think of us as your very own photography production team. From coming up with a creative direction for the shoot, to managing all the logistics including location sourcing & model castings. You can send us your products or outfits and we'll handle everything else -- keeping you in the loop every step of the way.&nbsp;</p>
       </div>
     </div>
   </div>
@@ -283,7 +283,7 @@ services:
   </div>
 </section>
 
-<section class="padded v-light-bg service-type">
+<section class="padded v-light-bg service-type" id="services">
   <h2 class="centered"> Explore our Services in detail </h2>
   <div class="padded grid">
 
