fix contact form

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@ header-class: on-top
 <!--  Contact form  -->
 <section class="padded-10 v-light-bg">
 
-    <form method="post" action="/success.html" class="enquiry capped-width">
+    <form method="post" action="/thanks" class="enquiry capped-width">
 
       <div class="grid padded">
       <div class="col-2_sm-12 relative">
@@ -81,10 +81,7 @@ header-class: on-top
       </div>
 
 
-
-
-
-      <input type="hidden" name="_to" value="sales@example.com,support@example.com">
+      <input type="hidden" name="_to" value="hello@eyesofanomad.com">
       <input type="text" name="_gotcha" style="display: none;">
 
 
