--- a/thanks.html
+++ b/thanks.html
@@ -15,7 +15,7 @@ header-class: on-top
       </div>
       </div>
       <div class="col-6_sm-1 right relative">
-          <h1 class="vertical-text big-bold"> . </h1>
+          <h1 class="vertical-text big-bold"> Thanks. </h1>
       </div>
   </div>
 </section>
