Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -1,12 +1,11 @@
 ---
 layout: default
-title: About Page
+title: About | Eyes of a Nomad
 meta-description:
 meta-keywords:
-featured-image_path:
+featured-image_path: /images/emile-profile.jpg
 banner_image: /images/placeholder.jpg
 ---
-
 
 <!-- - - - - - - - - - - - - - Banner both - - - - - - - - - - - - - - - - - -->
 
@@ -16,7 +15,11 @@ banner_image: /images/placeholder.jpg
       <div class="bg-image square" style="background-image:url('{{page.portfolio_image}}')"></div>
   </div>
   <div class="col-6_sm-12 padded-1 editable">
-      <h2> Hey, I'm Emilio </h2>
-      <p> Also known as Eyes of a Nomad </p>
+    <h2>I'm Emilio, aka Eyes of a Nomad.&nbsp;</h2>
+    <p>Photography has always been a passion in my life, starting when I was a toddler, grabbing my father&rsquo;s camera, emptying his entire roll of film aimlessly in a few short minutes and loving every minute of it. However, it wasn&rsquo;t until I left my home in Melbourne, Australia, &amp; began to travel the world, that my love for capturing a fraction of a second, something breathtakingly beautiful or a little crazy became an obsession.</p>
+    <p>I am now a full time photographer, content creator &amp; mentor living the dream in beautiful Bali, Indonesia.&nbsp;</p>
+    <p>If I&rsquo;m not helping brands capture the essence of their personality and telling their story through my photography/videography, I&rsquo;m travelling the world or teaching the next generation of content creators through my school the Institute of Code .</p>
+    <p>My career has seen me shooting fashion editorials, celebrities, fine dining restaurants &amp; epic hotels around the world. My work has been seen in the NY Times and I&rsquo;ve had the pleasure to be interviewed by major news networks, such as BBC &amp; the Discovery Channel.&nbsp;</p>
+    <p>Beyond my work as a photographer, I also run a creative agency (Kelapa Creative) that offers full shoot management, including logistic such as management of models &amp; HUMA, to location scouting &amp; styling to helping with the initial creative direction &amp; shoot vision. We also offer web development (incl shopify), social media management, branding &amp; marketing consultation. What ever the vision, we can make it happen.&nbsp;<br />&nbsp;</p>
   </div>
 </section>
