--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@ banner_image: /images/placeholder.jpg
 <!-- - - - - - - - - - - - - - Banner both - - - - - - - - - - - - - - - - - -->
 
 <!-- - - - - - - - - - - - - - Intro Section both - - - - - - - - - - - - - -->
-<section class="padded light-bg grid">
+<section class="padded light-bg grid mob-flex-flip">
   <div class="col-6_sm-12 padded-1">
-      <div class="bg-image square" style="background-image:url('{{page.portfolio_image}}')"></div>
+      <div class="bg-image square" style="background-image:url('{{page.featured-image_path}}')"></div>
   </div>
   <div class="col-6_sm-12 padded-1 editable">
       <h2> Hey, I'm Emilio </h2>
