--- a/work-with-us.html
+++ b/work-with-us.html
@@ -65,7 +65,7 @@ services:
   </div>
   <div class="col-4_sm-12 padded editable">
     <h3><a href="#videography">Videography &gt; </a></h3>
-    <p>Video is a powerful tool to capture the essence of your brand. From video walkthroughs of luxury villas, to fashion videos that shows &nbsp;how your fabric moves and flows.&nbsp;</p>
+    <p>Video is a powerful tool to capture the essence of your brand. From video walkthroughs of luxury villas, to fashion videos that shows how your fabric moves and flows.&nbsp;</p>
   </div>
   <div class="col-4_sm-12 padded editable">
     <h3><a href="#marketing">Marketing &gt; </a></h3>
@@ -78,7 +78,7 @@ services:
   <div class="col-6_sm-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Photography.</h2>
     <p>What makes a great photo? It's not about lighting or composition, although both of these are important. It's knowing what story you want to tell, what feeling you want to convey, what information you need to communicate and bringing that to life through the lens.&nbsp;</p>
-    <p>We work with local &amp; international companies here in Bali, as well as remotely for brands from all over the world to help them tell their story, and for the right project travel to you.</p>
+    <p>We work with local &amp; international companies here in Bali, as well as remotely for brands from all over the world to help them tell their story, and for the right project, travel to you.</p>
     <div class="grid">
       <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-5">
         <h4 class="margin-top-2">Affordable Packages</h4>
