Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -46,9 +46,9 @@ services:
       </span></span></h2>
     </div>
     <div class="col-6_sm-12-middle padded editable">
-    <p>We're more than just a photography studio, we're a full creative agency.&nbsp;</p>
-      <p>When we aren't creating content for incredible clients from all over the world, we're teaching the next generation of creatives. Running a school that teaches marketing, photography and social media means that we can bring the latest actionable insights and techniques to work for your brand or business. </p>
-      <p> We're not the kind of team that just turns up and shoots. With every client we take the time to really get to your know brand, understand your vision and bring it to life through content that we know will get actionable results for your business. Which is probably why we've received consistent 5-star reviews and recommendations from our clients over the years. </p>
+      <p>We're more than just a photography studio, we're a full creative agency.&nbsp;</p>
+      <p>When we aren't creating content for incredible clients from all over the world, we're teaching the next generation of creatives. Running a school that teaches marketing, photography and social media means that we can bring the latest actionable insights and techniques to work for your brand or business.</p>
+      <p>We're not the kind of team that just turns up and shoots. With every client we take the time to really get to your know brand, understand your vision and bring it to life through content that we know will get actionable results for your business. Which is probably why we've received consistent 5-star reviews and recommendations from our clients over the years.</p>
     </div>
   </div>
 </section>
@@ -86,7 +86,7 @@ services:
       </div>
       <div class="col-6_xs-12 padded-1 mob-p-5">
         <h4 class="margin-top-2">Full Production</h4>
-        <p class="subtle">Think of us as your very own photography production team. From coming up with a creative direction for the shoot, to managing all the logistics including location sourcing & model castings. You can send us your products or outfits and we'll handle everything else -- keeping you in the loop every step of the way.&nbsp;</p>
+        <p class="subtle">Think of us as your very own photography production team. From coming up with a creative direction for the shoot, to managing all the logistics including location sourcing &amp; model castings. You can send us your products or outfits and we'll handle everything else -- keeping you in the loop every step of the way.&nbsp;</p>
       </div>
     </div>
   </div>
@@ -119,7 +119,7 @@ services:
   <div class="col-6_sm-12  service-details">
     <div class="padded-r-10p">
         <p class="subtle editable">
-          <strong>Studio &amp; E-commerce </strong><br />With our very own state of the art photography studio at Kelapa Creative we have the skills, experience and equipment to create stunning studio imagery from cut-outs and product shots.&nbsp;&nbsp;
+          <strong>Studio &amp; E-commerce </strong><br />With our very own state of the art photography studio at Kelapa Creative we have the skills, experience and equipment to create stunning studio imagery from cut-outs to editorial fashion to creative product shots.&nbsp;&nbsp;
         </p>
     </div>
   </div>
@@ -185,7 +185,7 @@ services:
   <div class="col-6_sm-12 service-details">
     <div class="padded-l-10p editable">
       <h4 class="subtle">Our Videography Gear&nbsp;</h4>
-      <p class="subtle"><strong></strong>We have multiple cameras for use including Canon R5, which can shoot up to 8k RAW video. We also have a variety of additional equipment including gimbal stabilisers, &nbsp;professional audio recording, and underwater housing.&nbsp;<br />&nbsp;</p>
+      <p class="subtle"><strong></strong>We have multiple cameras for use including Canon R5, which can shoot up to 8k RAW video. We also have a variety of additional equipment including gimbals/sliders, professional audio recording, lighting and an underwater housing.&nbsp;<br />&nbsp;</p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
@@ -236,7 +236,7 @@ services:
   <div class="col-9_sm-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Marketing.</h2>
     <p>From brand development &amp; strategy through to implementation, we're a one-stop-shop that can handle all of your needs -- and prioritise your business as though it were our own.&nbsp;</p>
-    <p>Whether you're just starting out and want a roadmap of where to focus your efforts (because we know how overwhelming it can be) or your have an existing brand that's looking for fresh ideas and modern digital experience, we'll help you find a package that suits your needs (and your budget!). Then you can choose to take our strategy and run with it, or we can manager your social media for you ongoing.&nbsp;</p>
+    <p>Whether you're just starting out and want a roadmap of where to focus your efforts (because we know how overwhelming it can be) or your have an existing brand that's looking for fresh ideas and modern digital experience, we'll help you find a package that suits your needs (and your budget!). Then you can choose to take our strategy and run with it, or we can manage your social media for you ongoing.&nbsp;</p>
     <div class="grid">
       <div class="col-4_xs-12 padded-1 padded-l-0 mob-p-0">
         <h4 class="margin-top-2">Marketing Strategy</h4>
@@ -265,7 +265,7 @@ services:
 
       <hr class="centered" />
       <p class="editable">
-        Running <a href="http://www.instituteofcode.com">a school</a> that teaches marketing, photography and social media we bring the latest actionable insights and techniques to work for your brand or business.&nbsp;
+        By running <a href="http://www.instituteofcode.com">a school</a> that teaches marketing, photography and social media, we bring the latest actionable insights and techniques to work for your brand or business.&nbsp;
       </p>
       <hr class="centered" />
 
@@ -273,7 +273,7 @@ services:
 
   <div class="col-6_sm-12 service-details">
     <div class="padded-l-10p editable">
-      <p class="subtle"><strong>Strategic Perspective</strong><strong></strong><br />We always start with a strategic review of your business goals, your target customer, your competitors to build an in-depth social media strategy.&nbsp;</p>
+      <p class="subtle"><strong>Strategic Perspective</strong><strong></strong><br />We always start with a strategic review of your business goals, your target customer &amp; your competitors to build an in-depth social media strategy.&nbsp;</p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
