--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ banner_image: /images/placeholder.jpg
 <!-- - - - - - - - - - - - - - Banner both - - - - - - - - - - - - - - - - - -->
 
 <!-- - - - - - - - - - - - - - Intro Section both - - - - - - - - - - - - - -->
-<section class="padded light-bg grid mob-flex-flip">
+<section class="padded light-bg grid">
   <div class="col-6_sm-12 padded-1">
       <div class="bg-image square" style="background-image:url({{page.featured-image_path}})"></div>
   </div>
