--- a/work-with-us.html
+++ b/work-with-us.html
@@ -170,7 +170,12 @@ services:
     </p>
   </div>
   <div class="col-6_sm-12 padded-l-10p">
-    <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.videography-2_image}})"></div>
+    <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.videography-2_image}})">
+      <video controls poster="">
+          <source src="/videos" type="video/mp4">
+          <p>Your browser does not support the video element.</p>
+      </video>
+    </div>
   </div>
   <div class="col-5_xs-12-middle padded centered">
 
