--- a/work-with-us.html
+++ b/work-with-us.html
@@ -170,9 +170,9 @@ services:
     </p>
   </div>
   <div class="col-6_sm-12 padded-l-10p">
-    <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.videography-2_image}})">
-      <video controls poster="">
-          <source src="/videos" type="video/mp4">
+    <div class="margin-top-2 bump-right mob-bump-0">
+      <video controls poster="/videos/studio-screengrab.jpg">
+          <source src="/videos/studio-video-square.mp4" type="video/mp4">
           <p>Your browser does not support the video element.</p>
       </video>
     </div>
