video remove focus

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -205,28 +205,35 @@ services:
 <section class="padded padded-t-0 margin-t-15vh v-light-bg">
   <div class="capped-width-narrow padded padded-t-0">
 
-    <div class="slider-container slick-video-loop">
-      <div class="slick-item">
-        <div class="embed-container">
-            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
-        </div>
-      </div>
-      <div class="slick-item">
-        <div class="embed-container">
-            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
-        </div>
-      </div>
-      <div class="slick-item">
-        <div class="embed-container">
-            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
-        </div>
-      </div>
-      <div class="slick-item">
-        <div class="embed-container">
-            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
-        </div>
-      </div>
+    <div class="video-container">
+      <video controls poster="/videos/forsoul-screengrab.png">
+          <source src="/videos/forsoul-video.mp4" type="video/mp4">
+          <p>Your browser does not support the video element.</p>
+      </video>
     </div>
+
+    <!-- <div class="slider-container slick-video-loop">
+      <div class="slick-item">
+        <div class="embed-container">
+            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="slick-item">
+        <div class="embed-container">
+            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="slick-item">
+        <div class="embed-container">
+            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="slick-item">
+        <div class="embed-container">
+            <iframe src='https://www.youtube.com/embed/j1OlBfRivdI' frameborder='0' allowfullscreen></iframe>
+        </div>
+      </div>
+    </div> -->
     <div class="white-bg right padded-1">
         <a href="/contact" class="subtle-button"> Make an Enquiry > </a>
     </div>
