instagram mockup + contact pages

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ header-class: on-top
         </div>
 
         <div class="floating-input">
-          <input type="text" name="email" placeholder="Your Whatsapp (if preferred)" class="input-text">
+          <input type="text" name="whatsapp" placeholder="Your Whatsapp (if preferred)" class="input-text">
           <label class="input-label">Your Whatsapp</label>
         </div>
 
@@ -67,7 +67,7 @@ header-class: on-top
 
       <div class="col-10_sm-12 padded-2">
         <div class="floating-input">
-          <textarea name="message" placeholder="Tell me a little about your business or brand" class="input-text" required></textarea>
+          <textarea name="your-brand" placeholder="Tell me a little about your business or brand" class="input-text" required></textarea>
           <label class="input-label">Your Brand</label>
         </div>
 
