--- a/thanks.html
+++ b/thanks.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Contact | Eyes of a Nomad
+title: Thanks | Eyes of a Nomad
 footer_image: /images/placeholder-2.jpg
 header-class: on-top
 ---
