--- a/work-with-us.html
+++ b/work-with-us.html
@@ -175,6 +175,7 @@ services:
           <source src="/videos/studio-video-square.mp4" type="video/mp4">
           <p>Your browser does not support the video element.</p>
       </video>
+      <p class="image-caption-left"> Our Studio Setup </p>
     </div>
   </div>
   <div class="col-5_xs-12-middle padded centered">
@@ -265,9 +266,9 @@ services:
     </div>
   </div>
   <div class="col-3_sm-12-middle padded-1 mob-order-1">
-    <img src="/images/forsoul-2019/eon-forsoul-1.jpg" class="editable" />
+    <img src="/images/insta-mock/fashion-mock/liq-mock.png" class="editable" />
     <p class="image-caption-right editable">
-      This is a short image caption
+      Social Media Management in Bali
     </p>
   </div>
   <div class="col-6_sm-12 padded-l-10p">
