--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@ featured_image: /images/uma-2020/eon-uma2020-30.jpg
 <!-- Portfolio Loop Section  -->
 <section class="grid-spaceBetween portfolio padded mob-flex-flip">
   <div class="col-8_sm-12">
-    <div class="grid mob-horizontal-scroll">
+    <div class="grid mob-horizontal-scroll"  id="portfolio">
 
       {% for project in site.projects reversed %}
       <a class="col-4_sm-6_xs-10 padded-1 portfolio-item
