--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?lifestyle" id="lifestyle" class="bg-image lifestyle">
+      <a href="/portfolio?lifestyle" id="lifestyle" class="bg-image lifestyle lazy">
         <h3 class="pinned-to-bottom"> LIFESTYLE </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?product" id="product" class="bg-image product">
+      <a href="/portfolio?product" id="product" class="bg-image product lazy">
         <h3 class="pinned-to-bottom"> PRODUCT </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?venue" id="venue" class="bg-image venue">
+      <a href="/portfolio?venue" id="venue" class="bg-image venue lazy">
         <h3 class="pinned-to-bottom"> VENUE </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?food" id="food" class="bg-image food">
+      <a href="/portfolio?food" id="food" class="bg-image food lazy">
         <h3 class="pinned-to-bottom"> FOOD </h3>
       </a>
     </div>
@@ -144,7 +144,7 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 </section>
 
 <section class="bg-split-tan-white padded-10 padded-t-0">
-        <div class="bg-image wide-landscape" style="background-image:url({{page.wide_image}});"></div>
+        <div class="bg-image wide-landscape lazy" style="background-image:url({{page.wide_image}});"></div>
     </div>
   </div> <!-- end light-bg -->
 
@@ -165,12 +165,12 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
     <h3 class="vertical-text big-bold"> Feature. </h3>
   </div>
   <div class="col-3">
-    <a href="{{page.featured_project_url}}" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-40.jpg');"></a>
-    <a href="{{page.featured_project_url}}" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-8.jpg');"></a>
+    <a href="{{page.featured_project_url}}" class="bg-image portrait border-05 lazy" style="background-image:url('/images/liq-bikini/eon-liq-40.jpg');"></a>
+    <a href="{{page.featured_project_url}}" class="bg-image portrait border-05 lazy" style="background-image:url('/images/liq-bikini/eon-liq-8.jpg');"></a>
   </div>
   <div class="col-5 grid">
     <div class="col-12">
-      <a href="{{page.featured_project_url}}" class="bg-image tall-landscape border-05" style="background-image:url('/images/liq-bikini/eon-liq-29.jpg');"></a>
+      <a href="{{page.featured_project_url}}" class="bg-image tall-landscape border-05 lazy" style="background-image:url('/images/liq-bikini/eon-liq-29.jpg');"></a>
     </div>
     <div class="col-12-bottom padded-1 right">
       <a href="/portfolio" class="emphasis"> View Full Portfolio > </a>
@@ -190,6 +190,6 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 
 </style>
 
-<section class="banner tall-50 margin-top-5" style="background-image:url({{page.footer_image}});">
+<section class="banner tall-50 margin-top-5 bg-image lazy" style="background-image:url({{page.footer_image}});">
 
 </section>
