--- a/work-with-us.html
+++ b/work-with-us.html
@@ -97,7 +97,7 @@ services:
     </p>
   </div>
   <div class="col-6_sm-12 padded-l-10p">
-    <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.photography-2_image}})"></div>
+    <div class="margin-top-2 bg-image lazy square bump-right mob-bump-0" style="background-image:url({{page.photography-2_image}})"></div>
   </div>
   <div class="col-5_sm-12-middle padded centered">
 
@@ -128,16 +128,16 @@ services:
 <!-- Photography Gallery  -->
 <section class="padded grid-center mixed-gallery padded-t-0">
   <div class="col-4">
-    <a href="{{page.photography-gallery[0]}}" data-fancybox="gallery" class="bg-image landscape" style="background-image:url({{page.photography-gallery[0]}}"> </a>
-    <a href="{{page.photography-gallery[1]}}" data-fancybox="gallery" class="bg-image portrait" style="background-image:url({{page.photography-gallery[1]}}"> </a>
+    <a href="{{page.photography-gallery[0]}}" data-fancybox="gallery" class="bg-image landscape lazy" style="background-image:url({{page.photography-gallery[0]}}"> </a>
+    <a href="{{page.photography-gallery[1]}}" data-fancybox="gallery" class="bg-image portrait lazy" style="background-image:url({{page.photography-gallery[1]}}"> </a>
   </div>
   <div class="col-3">
-      <a href="{{page.photography-gallery[2]}}" data-fancybox="gallery" class="bg-image tall-portrait" style="background-image:url({{page.photography-gallery[2]}}"> </a>
-    <a href="{{page.photography-gallery[3]}}" data-fancybox="gallery" class="bg-image tall-portrait" style="background-image:url({{page.photography-gallery[3]}}"> </a>
+      <a href="{{page.photography-gallery[2]}}" data-fancybox="gallery" class="bg-image tall-portrait lazy" style="background-image:url({{page.photography-gallery[2]}}"> </a>
+    <a href="{{page.photography-gallery[3]}}" data-fancybox="gallery" class="bg-image tall-portrait lazy" style="background-image:url({{page.photography-gallery[3]}}"> </a>
   </div>
   <div class="col-4">
-    <a href="{{page.photography-gallery[4]}}" data-fancybox="gallery" class="bg-image portrait" style="background-image:url({{page.photography-gallery[4]}}"> </a>
-    <a href="{{page.photography-gallery[5]}}" data-fancybox="gallery" class="bg-image landscape" style="background-image:url({{page.photography-gallery[5]}}"> </a>
+    <a href="{{page.photography-gallery[4]}}" data-fancybox="gallery" class="bg-image portrait lazy" style="background-image:url({{page.photography-gallery[4]}}"> </a>
+    <a href="{{page.photography-gallery[5]}}" data-fancybox="gallery" class="bg-image landscape lazy" style="background-image:url({{page.photography-gallery[5]}}"> </a>
   </div>
   <div class="col-12 right padded-1">
       <a href="/contact" class="subtle-button"> Make an Enquiry > </a>
@@ -272,7 +272,7 @@ services:
     </p>
   </div>
   <div class="col-6_sm-12 padded-l-10p">
-    <div class="margin-top-2 bg-image square bump-right mob-bump-0" style="background-image:url({{page.photography-2_image}})"></div>
+    <div class="margin-top-2 bg-image lazy square bump-right mob-bump-0" style="background-image:url({{page.photography-2_image}})"></div>
   </div>
   <div class="col-5_sm-12-middle padded centered">
 
@@ -302,7 +302,7 @@ services:
 
     {% for service in page.services %}
     <div class="col-4">
-      <a class="grid bg-image" href="/services/{{service.name}}" style="background-image:url('{{service.image_path}}')">
+      <a class="grid bg-image lazy" href="/services/{{service.name}}" style="background-image:url('{{service.image_path}}')">
         <h3 class="col-12-bottom big-bold padded-1"> {{service.name}}.</h3>
         <div class="overlay gradient">
         </div>
