--- a/explore.html
+++ b/explore.html
@@ -9,8 +9,8 @@
   </a>
   <nav>
     <a href="/portfolio">View Portfolio</a>
-    <a href="/free-tutorial">Free Skin Re-touching Tutorial</a>
-    <a href="http://www.instituteofcode.com/courses/7-day-photography">Mini Photography Course $29</a>
+    <!-- <a href="/free-tutorial">Free Skin Re-touching Tutorial</a> -->
+    <!-- <a href="http://www.instituteofcode.com/courses/7-day-photography">Mini Photography Course $29</a> -->
     <a href="/work-with-me"> Work with me</a>
   </nav>
 </section>
@@ -18,17 +18,14 @@
   <h3> Latest Projects </h3>
   <div id="new-portfolio" class="horizontal-scroll grid">
 
-    {% assign counter = 0 %}
+
     {% for project in site.projects reversed %}
-    {% if counter < 12 and project.categories contains 'featured' %}
 
             <a href="{{project.url}}" class="mob-portfolio-item col-3_md-6_sm-10 padded-1">
               <div class="big-image" style="background-image:url('{{project.image1_path}}');"></div>
               <h4 class="uppercase"> {{project.title}} </h4>
             </a>
 
-        {% assign counter = counter | plus: 1 %}
-    {% endif %}
     {% endfor %}
 
   </div>
