Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 
 <section class="padded bg-split-white-tan">
     <div class="grid-center mob-flex-flip">
-        <div class="col-6_sm-12-middle padded">
+        <div class="col-6_sm-12-middle padded editable">
           <p> I am a photographer, content creator & photography mentor living the dream in beautiful Bali, Indonesia.  </p>
           <p> If I’m not helping brands capture the essence of their personality and telling their story through my photography/videography, I’m travelling the world or teaching the next generation of content creators through my school the <a target="_blank" href="http://www.instituteofcode.com">Institute of Code.</a></p>
         </div>
