small images for mobile home page

--- a/index.html
+++ b/index.html
@@ -51,27 +51,32 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 <section class="light-bg padded-v mob-show">
   <div class="col-12 mob-horizontal-scroll grid" style="padding: 0 1rem;">
     <div class="col-11 padded-1">
-      <a href="/portfolio?fashion" id="fashion" class="bg-image fashion">
+      <a href="/portfolio?fashion" id="fashion" class="bg-image" 
+      style="background-image:url('/images/small/fashion.jpg')">
         <h3 class="pinned-to-bottom"> FASHION </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?lifestyle" id="lifestyle" class="bg-image lifestyle lazy">
+      <a href="/portfolio?lifestyle" id="lifestyle" class="bg-image lazy"
+      style="background-image:url('/images/small/lifestyle.jpg')">
         <h3 class="pinned-to-bottom"> LIFESTYLE </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?product" id="product" class="bg-image product lazy">
+      <a href="/portfolio?product" id="product" class="bg-image product lazy"
+      style="background-image:url('/images/small/product.jpg')">
         <h3 class="pinned-to-bottom"> PRODUCT </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?venue" id="venue" class="bg-image venue lazy">
+      <a href="/portfolio?venue" id="venue" class="bg-image venue lazy"
+      style="background-image:url('/images/small/venue.jpg')">
         <h3 class="pinned-to-bottom"> VENUE </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?food" id="food" class="bg-image food lazy">
+      <a href="/portfolio?food" id="food" class="bg-image food lazy"
+      style="background-image:url('/images/small/food.jpg')">
         <h3 class="pinned-to-bottom"> FOOD </h3>
       </a>
     </div>
